# papers-feed

./: .gitignore  README.md  SUMMARY  background.js  gh-store-snapshot.json  index.html  manifest.json  options.html  options.js  papers.yaml  popup.html  popup.js  pyproject.toml
.github/workflows/: 1_store-sync.yml  1_update_and_enrich.yml  2_deploy-frontend.yml  build-extension.yml  convert-markdown.yaml  convert-markdown.yml  convert-pdfs.yaml  deduplicate-ghstore.yml  deploy_frontend.yaml  download-papers.yml  gh-store-snapshot.yml  ghstore-process-bulk.yml  ghstore-process-updates.yml  hard-refresh.yml  llamero-summarize.yaml  metadata-hydration.yml  mirror-issues.yaml  ops-misc.yml  ops-remove-files.yaml  ops-remove-files.yml  paper-enrichment.yml  process-events.yml  process-issue-task.yaml  process-paper.yml  process_enrichments.yaml  process_pdf.yml  refresh_pdfs.yaml  refresh_pdfs_via_tei.yaml  sync-paper-content.yml  test-extension.yml  test-extension.yml name: Test Extension  test-python.yml  toggle-issues.yml
SUMMARIES/: PYTHON.md
data/: git-info.json  papers.json  papers.yaml
data/papers/: failed_markdown.json  failed_markdown.txt  gh-store-snapshot.json  (+2 more)
extension/: CONVENTIONS.md  SUMMARY  background.bundle.js  background.js  background.ts  background_integration.ts  background_multi_source.js  content.bundle.js  content.js  content.ts  manifest.json  options.bundle.js  options.html  options.js  package.json  popup.bundle.js  popup.html  popup.js  popup.ts  rollup.config.js  tsconfig.json  vite.config.ts  webpack.config.js
frontend/: SUMMARY  generate_html.py  index.html  index.template.html  papersfeed.css  papersfeed.js
js/: main.js  papers.js
ops/: misc.sh  rm.txt
scripts/: SUMMARY  download_papers.py  github_repo_mirror.py  hydrate_metadata.py  process_enrichments.py  process_events.py  process_paper.py  process_pdf.py  process_task.py  tei2md.xslt  toggle_issues.py
styles/: base.css  controls.css  features.css  papers.css  tags.css
tests/: conftest.py  test_arxiv_api.py  test_arxiv_client.py  test_asset_manager.py  test_download_papers.py  test_event_filesystem.py  test_markdown_service.py  test_pandoc_utils.py  test_paper_manager.py  test_paper_manager_hydration.py  test_process_events.py  test_tex_utils.py
(+4546 files in other folders)
